--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,16 @@
 # Applications of computer simulations, Spring 2015, University of Zielona Góra
 
+## Generate states for all polymers of length n
+
+```bash
+$ python -m polymer_states.generate_states
+```
+
+## Technicalities
+
+* Python 3
+* Use virtualenv for a smooth experience
+
 ## License and copyright
 
 All source code is covered by the Mozilla Public License 2.0.
