--- a/README.mkd
+++ b/README.mkd
@@ -5,7 +5,7 @@
 * Python 3
 * Use virtualenv for a smooth experience
 
-## Generate states for all polymers of length n
+## Generate states for all polymers with n links
 
 ```bash
 $ python -m polymer_states.generate_states n
